Setting up metrics, adding metrics to RestAPI endpoints
