# accounts_service/app/pkg/accounts_service/v1/protos/api.pb.gw.go
@@ -396,7 +396,7 @@ func RegisterAccountsServiceV1HandlerServer(ctx context.Context, mux *runtime.Se
 		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
 		var err error
 		var annotatedContext context.Context
-		annotatedContext, err = runtime.AnnotateIncomingContext(ctx, mux, req, "/accounts_service.AccountsServiceV1/CreateAccount", runtime.WithHTTPPathPattern("/v1/create-account"))
+		annotatedContext, err = runtime.AnnotateIncomingContext(ctx, mux, req, "/accounts_service.AccountsServiceV1/CreateAccount", runtime.WithHTTPPathPattern("/v1/account/create"))
 		if err != nil {
 			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
 			return
@@ -710,7 +710,7 @@ func RegisterAccountsServiceV1HandlerClient(ctx context.Context, mux *runtime.Se
 		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
 		var err error
 		var annotatedContext context.Context
-		annotatedContext, err = runtime.AnnotateContext(ctx, mux, req, "/accounts_service.AccountsServiceV1/CreateAccount", runtime.WithHTTPPathPattern("/v1/create-account"))
+		annotatedContext, err = runtime.AnnotateContext(ctx, mux, req, "/accounts_service.AccountsServiceV1/CreateAccount", runtime.WithHTTPPathPattern("/v1/account/create"))
 		if err != nil {
 			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
 			return
@@ -950,7 +950,7 @@ func RegisterAccountsServiceV1HandlerClient(ctx context.Context, mux *runtime.Se
 }
 
 var (
-	pattern_AccountsServiceV1_CreateAccount_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "create-account"}, ""))
+	pattern_AccountsServiceV1_CreateAccount_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"v1", "account", "create"}, ""))
 
 	pattern_AccountsServiceV1_RequestAccountVerificationToken_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"v1", "verification", "request"}, ""))
 
